@@ -5,6 +5,7 @@ import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
 import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.Enumerations;
 import org.hl7.fhir.r4.model.IdType;
+import org.hl7.fhir.r4.model.OperationOutcome;
 import org.snomed.snowstorm.core.data.domain.ConceptMini;
 import org.snomed.snowstorm.core.data.domain.ReferenceSetMember;
 import org.snomed.snowstorm.core.data.services.ConceptService;
@@ -16,6 +17,7 @@ import org.snomed.snowstorm.fhir.domain.*;
 import org.snomed.snowstorm.fhir.pojo.FHIRCodeSystemVersionParams;
 import org.snomed.snowstorm.fhir.pojo.FHIRSnomedConceptMapConfig;
 import org.snomed.snowstorm.fhir.repositories.FHIRConceptMapRepository;
+import org.snomed.snowstorm.fhir.repositories.FHIRMapElementRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -34,7 +36,9 @@ import static java.lang.String.format;
 import static java.util.Comparator.*;
 import static co.elastic.clients.elasticsearch._types.query_dsl.QueryBuilders.*;
 import static io.kaicode.elasticvc.helper.QueryHelper.*;
+import static org.snomed.snowstorm.core.util.CollectionUtils.orEmpty;
 import static org.snomed.snowstorm.fhir.config.FHIRConstants.SNOMED_URI;
+import static org.snomed.snowstorm.fhir.services.FHIRHelper.exception;
 
 @Service
 public class FHIRConceptMapService {
@@ -48,6 +52,9 @@ public class FHIRConceptMapService {
 
 	@Autowired
 	private ElasticsearchOperations elasticsearchOperations;
+
+	@Autowired
+	private FHIRMapElementRepository mapElementRepository;
 
 	@Autowired
 	private FHIRCodeSystemService fhirCodeSystemService;
@@ -77,6 +84,51 @@ public class FHIRConceptMapService {
 	public void init() {
 		snomedMaps = implicitMapConfig.getImplicitMaps();
 		snomedCorrelationToFhirEquivalenceMap = implicitMapConfig.getSnomedCorrelationToFhirEquivalenceMap();
+	}
+
+	public FHIRConceptMap createOrUpdate(FHIRConceptMap conceptMap) {
+		if (conceptMap.getUrl().contains("?fhir_cm")) {
+			throw exception("ConceptMap url must not contain 'fhir_cm', this is reserved for implicit concept maps.", OperationOutcome.IssueType.INVARIANT, 400);
+		}
+
+		if (conceptMap.getVersion() == null) {
+			conceptMap.setVersion("0");
+		}
+
+		// Delete existing maps with the same URL and version
+		conceptMapRepository.findAllByUrl(conceptMap.getUrl())
+				.stream().filter(map -> conceptMap.getVersion().equals(map.getVersion()))
+						.forEach(map -> {
+							// Delete map group elements
+							for (FHIRConceptMapGroup mapGroup : map.getGroup()) {
+								if (mapGroup.getElement() != null) {
+									mapElementRepository.deleteAll(mapGroup.getElement());
+								}
+							}
+							conceptMapRepository.delete(map);
+						});
+
+		// Save concept map and groups
+		FHIRConceptMap saved = conceptMapRepository.save(conceptMap);
+		for (FHIRConceptMapGroup mapGroup : conceptMap.getGroup()) {
+			// Save elements within each group
+			mapElementRepository.saveAll(mapGroup.getElement());
+		}
+		return saved;
+	}
+
+	public FHIRConceptMap findByIdWithGroups(String idPart) {
+		Optional<FHIRConceptMap> conceptMap = conceptMapRepository.findById(idPart);
+		if (conceptMap.isPresent()) {
+			FHIRConceptMap map = conceptMap.get();
+			for (FHIRConceptMapGroup group : orEmpty(map.getGroup())) {
+				List<FHIRMapElement> elements = mapElementRepository.findAllByGroupId(group.getGroupId());
+				group.setElement(elements);
+			}
+			return map;
+		}
+
+		return null;
 	}
 
 	public List<FHIRConceptMap> findAll() {
@@ -153,7 +205,7 @@ public class FHIRConceptMapService {
 
 		// Grab generated snomed maps
 		maps.addAll(getSnomedMaps().stream()
-				.filter(map -> snomedPredicates.stream().allMatch(predicate -> predicate.test(map))).collect(Collectors.toList()));
+				.filter(map -> snomedPredicates.stream().allMatch(predicate -> predicate.test(map))).toList());
 
 		return maps;
 	}
